# fpsim

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  explore_data.py  load_dhs.R  methods_data_100th_step.csv  methods_data_25_34.csv  minimal_load.R  pyproject.toml  results.csv  senegal_parameters.py  setup.py  tempCodeRunnerFile.python
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
analyses/: explore_method_use.py  explore_skyscrapers.py
calibration/: run_senegal.py  senegal_parameters.py
campaign_generation/: CampaignClass.py  CampaignEnum.py  GenerateCampaignFP.py  GenerateCampaignRCM.py  README.md
commission_dtktools/: CampaignClass.py  GenerateCampaignRCM.py  README.md  commission_dtktools.py
commission_idmtools/: CampaignClass.py  GenerateCampaignRCM.py  analyze.py  commission_idmtools.py  idmtools.ini  plot_skyscraper.py
commission_pyemod/: GenerateCampaignRCM.py  commission_pyemod.py  run_emod
data/: API_SP.DYN.IMRT.IN_DS2_en_excel_v2_1495452.numbers.REMOVED.git-id  Fertility-PregnancyOutcome-data-2012-2015 (1).rds  sex_debut.csv  sexual_debut_age_probs.py
data_analyses/: analyze_calendar.py  calobj.py  calstring_to_obj.py  dhs_data_preprocess.r
docs/: FPsim parameter sources.xlsx  Makefile  README.md  conf.py  index.rst  make.bat  modules.rst  overview.rst  requirements.txt  tutorials.rst  variables.txt
dropbox/: preprocess_data.py
examples/: education_microsim.py  example_calib.py  example_calib_auto.py  example_calib_manual.py  example_empowerment_microsim.py  example_exp.py  example_fpmod.py  example_multisim.py  example_run.py  example_scens.py  (+3 more)
(+946 files in other folders)
