[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fpsim"
dynamic = ["version"]
description = "FPsim: Family Planning Simulator"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["family planning", "women's health", "agent-based model", "simulation", "starsim"]

authors = [
  { name = "Michelle O'Brien", email = "info@fpsim.org" },
  { name = "Annie Valente" },
  { name = "Cliff Kerr" },
  { name = "Robyn Stuart" },
  { name = "Paula Sanz-Leon" },
  { name = "Emily Driano" },
  { name = "Ryan Hull" },
  { name = "Aasli Nur" },
  { name = "Navideh Noori" },
  { name = "Daniel Klein" },
  { name = "Marita Zimmermann" },
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
    "starsim>=3.0.1",
    "matplotlib>=3.5.0",
    "seaborn>=0.9",
    "optuna",
    "plotnine",
    "pyarrow",
    "pyyaml",
]

[project.urls]
"Website" = "https://fpsim.org"
"Source" = "https://github.com/fpsim/fpsim/"

[tool.setuptools.packages.find]
where = ["."]
include = ["fpsim*"]

[tool.setuptools.dynamic]
version = {attr = "fpsim.version.__version__"}
